# scattering_transform

./: dataset.py  n_to_m.py  pyproject.toml
model/: coco_eval.py  coco_utils.py  dataset.py  detection.py  engine.py  ssd.py  train.py  utils.py
scattering_transform/scattering/: Scattering2d.py  __init__.py
synthesis/: dataset.py  detection.py  n_to_m.py  utils.py
