[tool.poetry]
name = "scattering"
version = "0.1.0"
description = "Fork of Sihao Cheng's scattering_transform project."
authors = ["Nick Sullivan <nsulmol@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
torch = "^2.5.1"
pillow = "^11.0.0"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
appdirs = "^1.4.4"
fire = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
